update agegroup,suggest,underlyingcondition